--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "react-socket-demo",
+  "author": "Manuel Jenny",
+  "license": "GPLv3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "concurrently": "4.1.2",
+    "express": "4.17.1",
+    "react": "16.9.0",
+    "react-d3-speedometer": "0.7.0",
+    "react-dom": "16.9.0",
+    "react-scripts": "3.1.1",
+    "socket.io": "2.2.0",
+    "socket.io-client": "2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm:start-server\" \"npm:start-sensor\" \"npm:start-app\"",
+    "start-app": "react-scripts start",
+    "start-server": "node src/server.js",
+    "start-sensor": "node src/sensor.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
